--- a/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
+++ b/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
@@ -18,4 +18,13 @@
     <ProjectReference Include="..\AzureTableDataStore\AzureTableDataStore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\bond_new.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\bond_old.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
