Tests rehauled into integration test suites, exceptions re-thinked, added documentation.

--- a/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
+++ b/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
@@ -25,6 +25,12 @@
     <None Update="Resources\bond_old.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\meade-telescope-n-2001000-lx85-goto.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\omegon-ac-70-700-az2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
