--- a/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
+++ b/src/AzureTableDataStore.Tests/AzureTableDataStore.Tests.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Properties\launchSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\bond_new.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
