--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -33,6 +33,8 @@ steps:
     env:
       TestAzureStorageConnectionString: $(connStr)
 
+  - script: ls -laR
+
   - task: PublishCodeCoverageResults@1
     displayName: 'Publish Code Coverage Results'
     inputs:
