--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ obj/
 .vs/
 src/AzureTableDataStore/AzureTableDataStore.xml
 src/AzureTableDataStore.Tests/Properties/launchSettings.json
+src/AzureTableDataStore.Tests/TestResults/
