--- a/pipeline/prerelease-nuget-pipeline.yml
+++ b/pipeline/prerelease-nuget-pipeline.yml
@@ -7,7 +7,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-  - script: dotnet pack -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source --configuration $(buildConfiguration) --version-suffix "prerelease-$(Date:yyyyMMdd).$(Rev:.r).$(Build.BuildNumber)"
+  - script: dotnet pack -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source --configuration $(buildConfiguration) --version-suffix "prerelease-$(Build.BuildNumber)" src/AzureTableDataStore/AzureTableDataStore.csproj
 
   - task: PublishPipelineArtifact@1
     displayName: 'Publish as artifact'
