--- a/pipeline/prerelease-nuget-pipeline.yml
+++ b/pipeline/prerelease-nuget-pipeline.yml
@@ -24,5 +24,5 @@ steps:
       custom: nuget
       arguments: >
         push $(Build.ArtifactStagingDirectory)/*.nupkg
-        -s $(NuGetSourceServerUrl)
-        -k $(NuGetSourceServerApiKey)
+        -s $(nuGetSourceServerUrl)
+        -k $(nuGetSourceServerApiKey)
