--- a/pipeline/prerelease-nuget-pipeline.yml
+++ b/pipeline/prerelease-nuget-pipeline.yml
@@ -11,7 +11,7 @@ variables:
 
 steps:
   # Version numbering is just so unbelievably difficult.
-  - script: dotnet pack -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source --configuration $(buildConfiguration) /p:Version=$(grep -oPm1 "(?<=<Version>)[^<]+" src/AzureTableDataStore/AzureTableDataStore.csproj)-prerelease-$(Build.BuildNumber)" src/AzureTableDataStore/AzureTableDataStore.csproj
+  - script: dotnet pack -o $(Build.ArtifactStagingDirectory) --include-symbols --include-source --configuration $(buildConfiguration) /p:Version=$(grep -oPm1 "(?<=<Version>)[^<]+" src/AzureTableDataStore/AzureTableDataStore.csproj)-prerelease-$(Build.BuildNumber) src/AzureTableDataStore/AzureTableDataStore.csproj
 
   - task: PublishPipelineArtifact@1
     displayName: 'Publish as artifact'
